# C_ClWxSim

./: .gitignore  CMakeLists.txt  README.md  makefile
include/core/: config.h
include/sim/: controller.h  pressure.h  world.h
include/ui/: graph.h  ui.h
include/utils/: array_utils.h  maths_utils.h  ui_utils.h
lib/fftw3/: CMakeLists.txt
src/sim/: controller.c  pressure.c  world.c
src/ui/: graph.c  notes.txt  ui.c
src/utils/: array_utils.c  maths_utils.c  ui_utils.c
